--- a/package.json
+++ b/package.json
@@ -21,10 +21,16 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-react": "^7.22.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "raw-loader": "^1.0.0",
+    "stylelint-config-standard": "^20.0.0",
     "terser-webpack-plugin": "^1.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
