--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A Phaser 3 Game Template for rapid game development",
   "main": "src/index.js",
   "scripts": {
-    "build": "webpack --config webpack/prod.js ",
-    "start": "webpack-dev-server --config webpack/base.js --open"
+    "build": "webpack --mode=production",
+    "start": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -35,7 +35,10 @@
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "resolve-url-loader": "^3.1.1",
+    "css-loader": "^4.3.0",
+    "style-loader": "^1.2.1"
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
