--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A Phaser 3 Game Template for rapid game development",
   "main": "src/index.js",
   "scripts": {
+    "test": "jest",
+    "test-verbose": "jest --verbose",
     "build": "webpack --mode=production",
     "start": "webpack-dev-server --open"
   },
@@ -23,22 +25,23 @@
     "@babel/preset-env": "^7.12.11",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "css-loader": "^4.3.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.22.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^26.6.3",
     "raw-loader": "^1.0.0",
+    "resolve-url-loader": "^3.1.1",
+    "style-loader": "^1.2.1",
     "stylelint-config-standard": "^20.0.0",
     "terser-webpack-plugin": "^1.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.1",
-    "webpack-merge": "^4.2.1",
-    "resolve-url-loader": "^3.1.1",
-    "css-loader": "^4.3.0",
-    "style-loader": "^1.2.1"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
