--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.0",
     "raw-loader": "^1.0.0",
     "resolve-url-loader": "^3.1.1",
     "style-loader": "^1.2.1",
+    "stylelint": "^13.9.0",
     "stylelint-config-standard": "^20.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.18.0",
     "terser-webpack-plugin": "^1.2.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
@@ -46,5 +50,10 @@
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "phaser": "^3.50.1"
+  },
+  "jest": {
+    "setupFiles": [
+      "jest-canvas-mock"
+    ]
   }
 }
